# XOOS

./: .gitattributes  CITATION.cff  CONTRIBUTING.md  LICENSE.md  README.md  SECURITY.md  SUMMARY.md
alignment_metrics/apps/: CMakeLists.txt  alignment-metrics.cpp
alignment_metrics/src/: CMakeLists.txt  alignment-metrics-cli.cpp  alignment-metrics-cli.h  alignment-metrics-options.cpp  alignment-metrics-options.h  alignment-metrics.cpp  alignment-metrics.h  metrics-worker.cpp  metrics-worker.h  run-alignment-metrics.cpp  run-alignment-metrics.h
alignment_metrics/src/core/: alignment.cpp  alignment.h  error-counts.h  hp-error-for-read.cpp  hp-error-for-read.h  interval.cpp  interval.h  pileup.cpp  pileup.h  region-lookup.cpp  region-lookup.h  substitution-lookup.cpp  substitution-lookup.h  super-region.cpp  super-region.h
alignment_metrics/src/io/: alignment-reader.cpp  alignment-reader.h  bed-reader.cpp  bed-reader.h  metrics-default-filenames.h
alignment_metrics/src/metadata/: alignment-metadata.cpp  alignment-metadata.h  dataset-metadata.cpp  dataset-metadata.h
alignment_metrics/src/metrics/: metrics-names.h  metrics.cpp  metrics.h
alignment_metrics/src/util/: format-util.cpp  format-util.h  homopolymer-util.cpp  homopolymer-util.h  region-util.cpp  region-util.h
common/cli/src/: CMakeLists.txt
common/compress/src/: CMakeLists.txt
common/concurrent/src/: CMakeLists.txt
common/enum/src/: CMakeLists.txt
common/histogram/src/: CMakeLists.txt
common/io/src/: CMakeLists.txt
common/log/src/: CMakeLists.txt
common/sex_predict/src/: CMakeLists.txt
common/types/src/: CMakeLists.txt
common/util/src/: CMakeLists.txt
common/vfs/src/: CMakeLists.txt
common/yc_decode/src/: CMakeLists.txt
demux/apps/: CMakeLists.txt  demux-strand-index.cpp  demux.cpp
demux/src/: CMakeLists.txt
demux/src/adapter-design/: adapter-design-bundle.cpp  adapter-design-bundle.h  adapter-design.cpp  adapter-design.h  generate-edited-sequence.cpp  generate-edited-sequence.h
demux/src/bloom-filter/: interleaved-bloom-filter.cpp  interleaved-bloom-filter.h
demux/src/cli/: demux.cpp  demux.h
demux/src/core/: demux-and-trim-pipeline.cpp  demux-and-trim-pipeline.h
demux/src/demux-strand-index/: demux-strand-build-pipeline.cpp  demux-strand-build-pipeline.h  strand-build.cpp  strand-build.h
demux/src/io/: memory-file-stream.h  read-record.h  sequence-reader.cpp  sequence-reader.h
demux/src/lut-bundle/: lut-bundle.h
demux/src/metrics/: duplex-metrics.cpp  duplex-metrics.h  metric-filenames.h  metrics-constraints.h  metrics.h  simplex-metrics.cpp  simplex-metrics.h
demux/src/sequence/: loci-range.cpp  loci-range.h
demux/src/simd/: simd-functions.cpp  simd-functions.h
demux/src/task/: alignment.cpp  alignment.h  batch.h  demux.cpp  demux.h  flow-context.cpp  flow-context.h  flow-manager.cpp  flow-manager.h  formatter.cpp  formatter.h  reader.cpp  reader.h  sink-worker.cpp  sink-worker.h  sink.cpp  sink.h  task.cpp  task.h
demux/src/utility/: alignment-util.cpp  alignment-util.h  fmt-number.cpp  fmt-number.h  fmt-path.h  math-util.h  range-util.h  stop-watch.h  string-util.cpp  string-util.h
pangenome_consensus_caller/src/: CMakeLists.txt  pangenome-consensus-caller-core.cpp  pangenome-consensus-caller-core.h
read_collapser/src/: CMakeLists.txt
read_collapser/src/clustering/: cluster-downsample.cpp  cluster-downsample.h  clustering.cpp  clustering.h
read_collapser/src/consensus/: base-encoder.cpp  base-encoder.h  consensus-matrix-builder.cpp  consensus-matrix-builder.h  consensus-matrix.cpp  consensus-matrix.h  consensus-result.cpp  consensus-result.h  consensus.cpp  consensus.h  majority-voting.cpp  majority-voting.h  poa-msa.cpp  poa-msa.h  qscore-calculator.cpp  qscore-calculator.h
read_collapser/src/core/: read-collapser-cli.cpp  read-collapser-cli.h  read-collapser-options.h  region-lookup.cpp  region-lookup.h  region-partition.cpp  region-partition.h  region.cpp  region.h
read_collapser/src/io/: alignment-io.cpp  alignment-io.h  alignment.cpp  alignment.h  fastq-writer.cpp  fastq-writer.h
read_collapser/src/mark-duplicate/: mark-duplicate.cpp  mark-duplicate.h  mean-base-quality.cpp  mean-base-quality.h
read_collapser/src/metrics/: metrics.cpp  metrics.h
read_collapser/src/util/: cli-option-util.cpp  cli-option-util.h  duplex-util.cpp  duplex-util.h  read-util.cpp  read-util.h  softclip-util.cpp  softclip-util.h
small_variant_caller/apps/: CMakeLists.txt  compute-bam-features.cpp  compute-vcf-features.cpp  filter-variants.cpp  train-model.cpp  vcf-to-bed.cpp
small_variant_caller/src/: CMakeLists.txt
small_variant_caller/src/compute-bam-features/: alignment-reader.cpp  alignment-reader.h  compute-bam-features-cli.cpp  compute-bam-features-cli.h  compute-bam-features.cpp  compute-bam-features.h  compute-bam-region-features.cpp  compute-bam-region-features.h  progress-meter.cpp  progress-meter.h  read-name-utils.cpp  read-name-utils.h  read-processing.cpp  read-processing.h  ref-region.cpp  ref-region.h  region.cpp  region.h
small_variant_caller/src/compute-vcf-features/: compute-vcf-features-cli.cpp  compute-vcf-features-cli.h  compute-vcf-features.cpp  compute-vcf-features.h  vcf-field-util.h  vcf-header-util.cpp  vcf-header-util.h
small_variant_caller/src/core/: bam-feature-collection.cpp  bam-feature-collection.h  cli-option-names.h  column-names.cpp  column-names.h  command-line-info.cpp  command-line-info.h  config.cpp  config.h  feature-normalization.cpp  feature-normalization.h  filtering.cpp  filtering.h  genotype.cpp  genotype.h  homopolymer-filter.h  model-metadata.cpp  model-metadata.h  score-calculator.cpp  score-calculator.h  sequencing-protocol.cpp  sequencing-protocol.h  sex.h  variant-feature-extraction.cpp  variant-feature-extraction.h  variant-id.cpp  variant-id.h  variant-info-serializer.cpp  variant-info-serializer.h  variant-info.cpp  variant-info.h  variant-type.cpp  variant-type.h  vcf-fields.h  workflow.cpp  workflow.h  yc-decode-method.h
small_variant_caller/src/filter-variants/: filter-region.cpp  filter-region.h  (+12 more)
(+389 files in other folders)
